Incorrect queries on timeseries with extended range on non dbPrimary (root cause not fixed - disabled resharding for timeseries so the bug can't occurr on moved unsharded collections)

XMLWordPrintableJSON

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0
    • CAR Team 2024-08-05
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      From 8.0, the time series collection can be moved to a non-dbPrimary shard. If the collection has extended-range events it is very likely that the queries with time filter are going to exclude the extended range events. This happens because the catalog flag signaling the presence of the extended range events is maintained on the local node carrying the collection, but the view resolution for the collection happens on the dbPrimary. The query in this case will most certainly end up using _id optimization and end up giving incorrect results.

      SERVER-73641 is working on a larger fix. But this ticket will offer an immediate solution to preventing this for non sharded collections on 8.0. A simple solution could be to disallow moving the unsharded time series away from the dbPrimary shard.

            Assignee:
            Robert Sander (Inactive)
            Reporter:
            Sulabh Mahajan
            Votes:
            0 Vote for this issue
            Watchers:
            26 Start watching this issue

              Created:
              Updated:
              Resolved: