SERVER-92896 Disable FeatureFlagReshardingForTimeseries by default (#25486)

GitOrigin-RevId: 87f3c358a7d4b25f614c9464d9ace81f37c7a37e