src/mongo/db/s/shardsvr_reshard_collection_command.cpp
@@ -101,6 +101,27 @@ public:
             CommandHelpers::uassertCommandRunWithMajority(Request::kCommandName,
                                                           opCtx->getWriteConcern());
 
+            {
+                FixedFCVRegion fixedFcvRegion{opCtx};
+                bool isReshardingForTimeseriesEnabled =
+                    mongo::resharding::gFeatureFlagReshardingForTimeseries.isEnabled(
+                        fixedFcvRegion->acquireFCVSnapshot());
+
+                AutoGetCollection collOrView{opCtx,
+                                             ns(),
+                                             MODE_IS,
+                                             AutoGetCollection::Options{}.viewMode(
+                                                 auto_get_collection::ViewMode::kViewsPermitted)};
+
+                bool isTimeseries = collOrView.getView()
+                    ? collOrView.getView()->timeseries()
+                    : *collOrView && collOrView->getTimeseriesOptions().has_value();
+
+                uassert(ErrorCodes::IllegalOperation,
+                        "Can't reshard a timeseries collection",
+                        !isTimeseries || isReshardingForTimeseriesEnabled);
+            }
+
             if (resharding::isMoveCollection(request().getProvenance())) {
                 bool clusterHasTwoOrMoreShards = [&]() {
                     auto* clusterParameters = ServerParameterSet::getClusterParameterSet();
@@ -118,16 +139,7 @@ public:
                 uassert(ErrorCodes::IllegalOperation,
                         "Can't move an internal resharding collection",
                         !ns().isTemporaryReshardingCollection());
-                {
-                    FixedFCVRegion fixedFcvRegion{opCtx};
-                    bool isReshardingForTimeseriesEnabled =
-                        mongo::resharding::gFeatureFlagReshardingForTimeseries.isEnabled(
-                            fixedFcvRegion->acquireFCVSnapshot());
-                    uassert(ErrorCodes::IllegalOperation,
-                            "Can't move a timeseries collection",
-                            !ns().isTimeseriesBucketsCollection() ||
-                                isReshardingForTimeseriesEnabled);
-                }
+
                 // TODO (SERVER-88623): re-evalutate the need to track the collection before calling
                 // into moveCollection
                 ShardsvrCreateCollectionRequest trackCollectionRequest;
